--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <title> <%= username %> </title>
+  <title> <%= user %> </title>
 </head>
 <body>
 
-<center> <%= username %> </title>
+<center> <%= user %> </title>
 
 </body>
 </html>
