--- a/views/login.ejs
+++ b/views/login.ejs
@@ -128,6 +128,7 @@ function verifyUser() {
           <input type="password" placeholder="Enter Password" name="psw" required>
       
           <button type="submit">Login</button>
+          <center><a href="/signup">Don't have an account?</a></center>
           <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
           </label>
