--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+body { background: darkred; }
 /* Center the loader */
 #loader {
   position: absolute;
