--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+h1 { color: white }
 body { background: darkred; }
 /* Center the loader */
 #loader {
@@ -88,10 +89,11 @@ body { background: darkred; }
 <div style="display:none;" id="myDiv" class="animate-bottom">
 
 <h1> <%= user %>'s profile </h1>
-<div class="btn-group">
-  <button>Apple</button>
-  <button>Samsung</button>
-  <button>Sony</button>
+<div class="btn-group" style="width:100%">
+  <button style="width:25%">Apple</button>
+  <button style="width:25%">Samsung</button>
+  <button style="width:25%">Sony</button>
+  <button style="width:25%">HTC</button>
 </div>
 </div>
 
