--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 h1 { color: white }
-body { background: darkred; }
+body { background-image: linear-gradient(#ffffff, #ffffff); }
 /* Center the loader */
 #loader {
   position: absolute;
