--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -4,7 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 h1 { color: white }
-body { background-image: linear-gradient(#780206, #061161); }
+body { 
+background-image: linear-gradient(#780206, #061161); 
+background-size: auto;
+backgrounf-repeat: no-repeat;
+}
 /* Center the loader */
 #loader {
   position: absolute;
