--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -99,6 +99,9 @@ backgrounf-repeat: no-repeat;
   <button style="width:25%">Sony</button>
   <button style="width:25%">HTC</button>
 </div>
+<br><br><br><br>
+
+<center><input type="text">Item Name</input></center>
 </div>
 
 <script>
