--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -61,7 +61,7 @@ backgrounf-repeat: no-repeat;
   text-align: center;
 }
 .btn-group button {
-  background-color: #4CAF50; /* Green background */
+  background-color: darkred; /* Green background */
   border: 1px solid green; /* Green border */
   color: white; /* White text */
   padding: 10px 24px; /* Some padding */
@@ -102,7 +102,7 @@ label {
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: darkred;
   color: white;
   padding: 12px 20px;
   border: none;
