--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -164,7 +164,7 @@ input[type=submit]:hover {
 </div>
 <br><br><br><br>
 <div class="container">
-  <form action="/addItem">
+  <form action="/addItem" method="POST">
   <div class="row">
     <div class="col-25">
       <label for="itemName">Item Name</label>
