--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -187,9 +187,10 @@ input[type=submit]:hover {
     </div>
     <div class="col-75">
       <select id="itemArea" name="itemArea">
-        <option value="australia">Greenguard</option>
-        <option value="canada">Doomwood</option>
-        <option value="usa">Ashfall</option>
+        <option value="Battleon">Battleon</option>
+        <option value="Greenguard">Greenguard</option>
+        <option value="Doomwood">Doomwood</option>
+        <option value="Ashfall">Ashfall</option>
       </select>
     </div>
   </div>
