--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -181,6 +181,9 @@ input[type=submit]:hover {
       <input type="text" id="requiredItemLevel" name="requiredItemLevel" placeholder="Required Item Level">
     </div>
   </div>
+   <div class="col-25">
+     <label for="itemNpc">Item NPC</label>
+    </div>
   <div class="row">
     <div class="col-25">
       <label for="itemArea">Item Area</label>
@@ -191,6 +194,7 @@ input[type=submit]:hover {
         <option value="Greenguard">Greenguard</option>
         <option value="Doomwood">Doomwood</option>
         <option value="Ashfall">Ashfall</option>
+        <option value="Other">Other (Specify on description)</option>
       </select>
     </div>
   </div>
