--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -181,9 +181,14 @@ input[type=submit]:hover {
       <input type="text" id="requiredItemLevel" name="requiredItemLevel" placeholder="Required Item Level">
     </div>
   </div>
+  <div class="row">
    <div class="col-25">
      <label for="itemNpc">Item NPC</label>
     </div>
+    <div class="col-75">
+    <input type="text" id="itemNpc" name="itemNpc" placeholder="Item can be found on this NPC">
+    </div>
+   </div>
   <div class="row">
     <div class="col-25">
       <label for="itemArea">Item Area</label>
