--- a/views/userboard.ejs
+++ b/views/userboard.ejs
@@ -211,6 +211,7 @@ input[type=submit]:hover {
       <textarea id="itemDescription" name="itemDescription" placeholder="Write the item description located in the game." style="height:200px"></textarea>
     </div>
   </div>
+  <input type="text" id="createdBy" name="createdBy" value=<%= user %> hidden>
   <div class="row">
     <input type="submit" value="Submit">
   </div>
