--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -63,7 +63,7 @@ a {
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="uname"><b>Email</b></label>
+    <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter username" name="uname" required>
 
     <label for="psw"><b>Password</b></label>
